<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_bottomsheet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_warningForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_circle_hardgrey">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_warning"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tvTitle_ReportForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/cl_warningForm"
        app:layout_constraintTop_toTopOf="@+id/cl_warningForm"
        app:layout_constraintBottom_toBottomOf="@+id/cl_warningForm"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/tvTitle_ReportForm"/>

    <EditText
        android:id="@+id/et_DatePicker"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle_ReportForm"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_rectangle_softgrey"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:drawableLeft="@drawable/ic_calendar"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/dummy_time"/>

    <com.pangondionkn.vecore.view.advanced_ui.InputDropdownLayout
        android:id="@+id/ddl_ReportForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_DatePicker"/>

    <com.pangondionkn.vecore.view.advanced_ui.InputNoteLayout
        android:id="@+id/inl_ReportForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="@+id/ddl_ReportForm"
        app:layout_constraintEnd_toEndOf="@+id/ddl_ReportForm"
        app:layout_constraintTop_toBottomOf="@+id/ddl_ReportForm"/>

    <TextView
        android:id="@+id/tvTitle_UploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/inl_ReportForm"
        app:layout_constraintTop_toBottomOf="@+id/inl_ReportForm"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/tvTitle_UploadImage"/>

    <ImageView
        android:id="@+id/ivUploadImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="@+id/tvTitle_UploadImage"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle_UploadImage"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_image"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUploadImage"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@+id/ivUploadImage"
        app:layout_constraintTop_toTopOf="@+id/ivUploadImage"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_rectangle_primary"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="Upload Image"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendReport"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_rectangle_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivUploadImage"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/btntxt_SendReport"/>

</androidx.constraintlayout.widget.ConstraintLayout>