<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_rectangle_header">

        <ImageView
            android:id="@+id/ivAppLogo"
            android:layout_width="250dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="-20dp"
            android:src="@drawable/vecore_logo"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivAppLogo"
            app:layout_constraintBottom_toBottomOf="@+id/ivAppLogo"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_circle_softgrey">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_search"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvTitle_RepComplaintVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAppLogo"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorGreyHard"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/tvTitle_RepComplaintVehicle"/>

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tvTitle_RepComplaintVehicle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle_RepComplaintVehicle"
            android:layout_marginTop="5dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/tv_userFullname"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItemReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_Header"
        tools:listitem="@layout/layout_itemrv"
        tools:ignore="NotSibling" />

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_Footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:background="@drawable/bg_rectangle_plain_stroke_grey">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_MakeReport"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_rectangle_softgrey"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:text="@string/btntext_MakeReport"
                tools:ignore="MissingConstraints"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>